# yfApi

./: README.md  main.py  notebook.ipynb  pyproject.toml
data/: tickers_data.py
routes/: tickers_route.py
tools/: cache.py  const.py
