[tool.poetry]
name = "testtask2"
version = "0.0.1"
description = "Python API to get some information about companies traded on the exchange"
authors = ["Sergei Kolesnik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.10"
pydantic = "^1.10.4"
fastapi = "^0.90.1"
uvicorn = "^0.20.0"
isort = "^5.12.0"
black = "^23.1.0"
joblib = "^1.2.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
